Fix deathswap bugs